Change vec implementation.

--- a/NQueens/c++/Makefile
+++ b/NQueens/c++/Makefile
@@ -1,8 +1,8 @@
 
 all: nqueens
 
-nqueens: nqueens.cpp
-	g++ -O3 nqueens.cpp -o nqueens
+nqueens: nqueens.cpp Makefile
+	g++ nqueens.cpp -o nqueens
 
 clean:
 	rm -f nqueens
