--- a/NQueens/c++/Makefile
+++ b/NQueens/c++/Makefile
@@ -2,7 +2,7 @@
 all: nqueens
 
 nqueens: nqueens.cpp Makefile
-	g++ nqueens.cpp -o nqueens
+	g++ -O3 nqueens.cpp -o nqueens
 
 clean:
 	rm -f nqueens
