--- a/SSSP/c++/Makefile
+++ b/SSSP/c++/Makefile
@@ -8,7 +8,7 @@ INCLUDE_DIRS = -I.
 LIBRARY_DIRS =
 
 PROFILING = #-pg
-OPTIMIZATIONS =
+OPTIMIZATIONS = -O3
 ARCH = -march=x86-64
 DEBUG = -DNDEBUG #-g
 WARNINGS = -Wall -Wextra #-Werror
